Updated Candidate List
Updated Candidate List

--- a/RecruitMeNot/src/aura/CandidateList/CandidateList.cmp
+++ b/RecruitMeNot/src/aura/CandidateList/CandidateList.cmp
@@ -2,7 +2,7 @@
 	<aura:attribute name="candidates" type="String[]" default="['J.C.','Jeff','Saira', 'Jessica']" />
     <div>
     	<aura:iteration items="{!v.candidates}" var="candidate" >
-        	<ui:outputText value="{!candidate}" />
+        	<ui:outputText value="{!candidate}" /></br>
         </aura:iteration>
     </div>
 </aura:component>
