--- a/RecruitMeNot/src/aura/NewCandidate/NewCandidate.cmp
+++ b/RecruitMeNot/src/aura/NewCandidate/NewCandidate.cmp
@@ -2,7 +2,7 @@
         <aura:attribute name="name" type="String" />
         <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 	<div>
-    <h1>Enter New Candidate</h1>
+    <h1>Enter New Candidate Information</h1>
         <ui:inputText label="name" aura:id="name" value="{!v.name}" />
         <ui:inputSelect label="Candidate Type" aura:id="Type" />
         <ui:button label="submit" press="{!c.newCandidate}" />
